--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -20,7 +20,7 @@
                   <input type="password" style="text-align: center;" [(ngModel)]="credenciales.password" maxlength="35" placeholder="Contraseña" id="typePasswordX" class="form-control form-control-lg" />
                 </div>
   
-                <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Olvido su contraseña?</a></p>
+                <p class="small mb-5 pb-lg-2"><a class="text-white-50" (click)="forgotPassword()">Olvidó su contraseña?</a></p>
                 
                 <button (click)="login()" data-mdb-button-init data-mdb-ripple-init class="btn btn-outline-light btn-lg px-5" type="submit">Ingresar</button>
   
