--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,26 +1,33 @@
   <body class="vh-100 gradient-custom">
+
     <div class="navbar-custom">
-      <!-- <a (click)="toggleDropdown()" *ngIf="currentUser$ | async as user">
-        <img *ngIf="user.photoURL" src="{{user.photoURL}}" alt="Foto de perfil de usuario" class="user-photo">
-        <img *ngIf="!user.photoURL" src="https://firebasestorage.googleapis.com/v0/b/saladejuegos-f63ca.appspot.com/o/CV.jpeg?alt=media&token=9e535adc-76b1-4019-a2a9-aa80bcc8e7b9s" class="user-photo">
-        {{ user.displayName ? user.displayName : user.email }}
-      </a> -->
+      <a (click)="toggleDropdown()">
+        <span *ngIf="currentUser$ | async as user">
+          <span *ngIf="user.photoURL">
+            <img [src]="user.photoURL" alt="Foto de perfil de usuario" class="user-photo">
+          </span>
+          <span *ngIf="!user.photoURL">
+            <i class="fas fa-user-circle"></i>&nbsp;&nbsp;
+          </span>
+          {{ user.displayName ? user.displayName : user.email }}
+        </span>
+      </a>
       <div class="dropdown-content" *ngIf="isDropdownOpen">
-        <button class="logout-button" *ngIf="showLogoutButton" (click)="logout()">
+        <button class="logout-button" (click)="logout()">
           <i class="fa solid fa-power-off"></i> Cerrar Sesión
         </button>
       </div>
     </div>
 
     <div class="sidenav" [ngClass]="collapsed ? 'sidenav-collapsed': '' ">
-
       <div class="logo-container">
-        <button class="logo" (click)="toggleCollapse()">SJ</button>
+        <button class="logo"(click)="toggleCollapse()">SG</button>
         <div class="logo-text" *ngIf="collapsed">Sala de Juegos</div>
         <button class="btn-close" *ngIf="collapsed" (click)="closeSidenav()">
           <i class="fa-solid fa-xmark fa-xl" style="color: #ffffff;"></i>
         </button>
-      </div>
+        
+    </div>
 
       <ul class="sidenav-nav">
         <li class="sidenav-nav-item" *ngFor="let data of navData">
@@ -30,6 +37,7 @@
           </a>
         </li>
       </ul>
+      
       <!-- <app-chat *ngIf="currentUser$ | async as user"></app-chat> -->
     </div>
 
