--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,3 @@
 /* You can add global styles to this file, and also import other style files */
-@import url('https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css');
+@import 'bootstrap/dist/css/bootstrap.min.css';
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
