--- a/src/app/home/quiensoy/quiensoy.component.css
+++ b/src/app/home/quiensoy/quiensoy.component.css
@@ -1,8 +1,14 @@
-body,
-html {
-  height: 100%;
-  margin: 0;
+.gradient-custom {
+  /* fallback for old browsers */
+  background: #6a11cb;
+
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: -webkit-linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1));
+
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1))
 }
+
 
 *{
     box-sizing: border-box;
@@ -13,7 +19,6 @@ body {
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-image: url(https://firebasestorage.googleapis.com/v0/b/tp-sala-de-juegos-diazgiossol.appspot.com/o/background.svg?alt=media&token=dc633112-e417-4d83-85cd-769218c72573);
     background-repeat: no-repeat;
     background-size: cover;
     font-family: "Euclid Circular A", "Poppins";
@@ -88,6 +93,7 @@ margin-bottom: 24px;
     align-items: center;
     justify-content: center;
     text-align: center;
+    height: 100vh;
 }
 
 
