--- a/src/app/home/word-scramble/word-scramble.component.html
+++ b/src/app/home/word-scramble/word-scramble.component.html
@@ -1,1 +1,64 @@
-<p>word-scramble works!</p>
+<body class="vh-100 gradient-custom">
+    
+    <div class="navbar-custom">
+        <a (click)="toggleDropdown()">
+          <span *ngIf="currentUser$ | async as user">
+            <span *ngIf="user.photoURL">
+              <img [src]="user.photoURL" alt="Foto de perfil de usuario" class="user-photo">
+            </span>
+            <span *ngIf="!user.photoURL">
+              <i class="fas fa-user-circle"></i>&nbsp;&nbsp;
+            </span>
+            {{ user.displayName ? user.displayName : user.email }}
+          </span>
+        </a>
+        <div class="dropdown-content" *ngIf="isDropdownOpen">
+          <button class="logout-button" (click)="logout()">
+            <i class="fa solid fa-power-off"></i> Cerrar Sesión
+          </button>
+        </div>
+      </div>
+
+    <app-chat *ngIf="currentUser$ | async as user"></app-chat>
+        
+    <div class="card-container">
+    
+        <div class="game-info text-center">
+            <h1>{{ title }}</h1>
+        </div>
+        
+        <div class="container">
+            <h2>Word Scramble</h2>
+            <div class="content">
+                <p class="word"></p>
+                <div class="details">
+                    <p class="hint">Ayuda: <span></span></p>
+                    <p class="time">Tiempo restante: <span><b>30</b>s</span></p>
+                </div>
+                <input type="text" spellcheck="false" placeholder="Ingrese una palabra">
+                <div class="buttons">
+                    <button class="refresh-word">Actualizar palabra</button>
+                    <button class="check-word">Verificar palabra</button>
+                </div>
+                <div class="start-button" *ngIf="!gameStarted">
+                    <button class="start-game" (click)="startGame()">Comenzar Juego</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="result mb-4" #resultMessage>
+            <p>{{ resultMessageText }}</p>
+          </div>
+      
+          <div class="score mb-4">
+            <p>Puntaje: {{ score }}</p>
+          </div>
+
+        <input type="button" [value]="btnVolver" [class]="['back-button']" (click)="onClick($event)" />
+
+    </div>
+
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    
+</body>
+
