--- a/src/app/home/preguntados/preguntados.component.css
+++ b/src/app/home/preguntados/preguntados.component.css
@@ -15,6 +15,7 @@ body{
     justify-content: center;
     min-height: 100vh;
     font-family: "Euclid Circular A", "Poppins";
+    overflow-y: auto;
 }
 
 .navbar-custom {
