--- a/src/app/home/word-scramble/word-scramble.component.css
+++ b/src/app/home/word-scramble/word-scramble.component.css
@@ -15,6 +15,7 @@
     height: 100vh;
     background-repeat: no-repeat;
     background-size: cover;
+    padding: 0 200px;
   }
 
 body{
@@ -25,9 +26,11 @@ body{
     min-height: 100vh;
     background: #9d14dc;
     font-family: "Poppins", sans-serif;
+    overflow-y: auto;
 }
 
 .container {
+    margin-top: 165px;
     width: 450px;
     border-radius: 10px;
     background: #222;
@@ -45,6 +48,7 @@ h2{
     padding: 20px 25px;
     border-bottom: 1px solid #333;
     color: #fff;
+    
 }
 
 .container .content{
@@ -84,6 +88,23 @@ h2{
     background-color: #111;
     color: #bbb;
 }
+
+.game-info {
+    width: 250px;
+    border: 4px solid #007bff;
+    border-radius: 10px;
+    padding: 10px;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+    
+    
+  }
+  
+  .game-description {
+    font-size: 18px;
+    line-height: 1.6;
+    color: #fff;
+    
+  }
 
 .content input:focus {
     border-color: #5372f0;
